# illuminati

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 3365329fc747_create_initial_schema.py
docs/: README.md  api-specification.md  architecture.md  development-guide.md  domain-model.md  frontend.md  manual-test-scenarios.md  project-setup.md  use-cases.md
docs/adr/: 001-clean-architecture.md  002-balance-computation.md  003-uv-over-poetry.md
frontend/: nginx.conf  package-lock.json
frontend/src/: main.tsx  router.tsx
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx  Modal.tsx  Pagination.tsx
frontend/src/hooks/: useAccounts.ts  useTransactions.ts
frontend/src/types/: api.ts
src/ledger/: __init__.py  main.py
src/ledger/api/: __init__.py  dependencies.py  exception_handlers.py  schemas.py
src/ledger/application/: __init__.py  account_service.py  interfaces.py  pagination.py  transaction_service.py
src/ledger/domain/: __init__.py  (+4 more)
tests/: __init__.py  conftest.py  test_health.py
tests/api/: __init__.py  conftest.py  test_accounts_api.py  test_cors.py  test_transactions_api.py
tests/integration/: __init__.py  conftest.py  test_account_repo.py  test_balance_integration.py  test_migrations.py  test_orm_models.py  test_seed.py  test_transaction_repo.py
tests/unit/: __init__.py  test_account_model.py  test_balance_calculation.py  test_transaction_validation.py
(+20 files in other folders)
